# Avito_trainee

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  locustfile.py  pyproject.toml
app/: config.py  main.py
app/database/: db.py  models.py
app/models/: pull_request.py  stats.py  teams.py  users.py
app/routers/: pull_request.py  stats.py  teams.py  users.py
app/schemas/: pull_request.py  stats.py  teams.py  users.py
app/tests/: conftest.py  test_integration.py
migrations/: env.py
migrations/versions/: 7588c8c6fe1d_initial.py
